Changes: Added another js file that features Conditional statements, switches, and functions. Also learned how to utilize arrow functions which may help slim code. Added a object.js file to experiment how OOP works with function consturctors/prototypes and classes. They ultimately do the same thing, but classes are easier to write and read. Security Concerns: N/A

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <hi>JS Crash Course</hi>
     </header>
 
-<script src = "main.js"></script>
+<script src = "object.js"></script>
 </body>
 </html>
