--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
       <ul id="users"></ul>
 
-      <ul class="items">
+      <!--<ul class="items">
         <li class="item">Item 1</li>
         <li class="item">Item 2</li>
         <li class="item">Item 3</li>
       </ul> 
-    </section>
+    </section>-->
     
 
-    <script src="dom.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
